mapcss/generated/MapCSSParser.py
# Generated from MapCSS.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MapCSSParser ( Parser ):

    grammarFileName = "MapCSS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'?'", "'\\u2208'", "'\\u29C9'", 
                     "'\\u2286'", "'\\u2287'", "'\\u2288'", "'\\u2289'", 
                     "'('", "')'", "'.'", "<INVALID>", "'!='", "'<='", "'>='", 
                     "'<'", "'>'", "'=~'", "'!~'", "'^='", "'$='", "'*='", 
                     "'~='", "'||'", "'&&'", "'*'", "'/'", "'%'", "'+'", 
                     "'-'", "'!'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'['", "']'", "'{'", "'}'", "':'", "';'" ]

    symbolicNames = [ "<INVALID>", "COMMA", "QUESTION_MARK", "OP_INCLUDED_IN", 
                      "OP_INTERSECTS", "OP_SUBSET", "OP_SUPERSET", "OP_NOSUBSET", 
                      "OP_NOSUPERSET", "PAR_OPEN", "PAR_CLOSE", "DOT", "OP_EQ", 
                      "OP_NEQ", "OP_LE", "OP_GE", "OP_LT", "OP_GT", "OP_MATCH", 
                      "OP_NOT_MATCH", "OP_STARTS_WITH", "OP_ENDS_WITH", 
                      "OP_SUBSTRING", "OP_CONTAINS", "OP_OR", "OP_AND", 
                      "OP_MUL", "OP_DIV", "OP_MOD", "OP_PLUS", "OP_MINUS", 
                      "OP_NOT", "SET", "IMPORT", "NCOMPONENT", "LBRACKET", 
                      "RBRACKET", "LBRACE", "RBRACE", "COLON", "SEMICOLON", 
                      "DQUOTED_STRING", "SQUOTED_STRING", "POSITIVE_INT", 
                      "NEGATIVE_INT", "POSITIVE_FLOAT", "NEGATIVE_FLOAT", 
                      "RANGE", "REGEXP", "WS", "SL_COMMENT", "ML_COMMENT", 
                      "STYLESHEET", "RULE", "SIMPLE_SELECTOR", "DESCENDANT_COMBINATOR", 
                      "CHILD_COMBINATOR", "PARENT_COMBINATOR", "TYPE_SELECTOR", 
                      "ZOOM_SELECTOR", "ATTRIBUTE_SELECTOR", "CLASS_SELECTOR", 
                      "PSEUDO_CLASS_SELECTOR", "LAYER_ID_SELECTOR", "DECLARATION_BLOCK", 
                      "DECLARATION", "VALUE_RGB", "VALUE_RGBA", "VALUE_URL", 
                      "VALUE_KEYWORD", "VALUE_QUOTED", "VALUE_FLOAT", "VALUE_INT", 
                      "VALUE_PERCENTAGE", "VALUE_POINTS", "VALUE_PIXELS", 
                      "VALUE_LIST", "VALUE_REGEXP", "VALUE_INCREMENT", "FUNCTION_CALL", 
                      "PREDICATE", "TR_CALL", "EVAL_CALL" ]

    RULE_stylesheet = 0
    RULE_entry = 1
    RULE_rule_ = 2
    RULE_selector = 3
    RULE_simple_selector_operator = 4
    RULE_link_selector = 5
    RULE_layer_id_selector = 6
    RULE_simple_selector = 7
    RULE_zoom_selector = 8
    RULE_quoted = 9
    RULE_cssident = 10
    RULE_osmtag = 11
    RULE_attribute_selector = 12
    RULE_predicate = 13
    RULE_predicate_simple = 14
    RULE_class_selector = 15
    RULE_pseudo_class_selector = 16
    RULE_type_selector = 17
    RULE_declaration_block = 18
    RULE_declarations = 19
    RULE_declaration = 20
    RULE_declaration_property = 21
    RULE_declaration_value = 22
    RULE_int_ = 23
    RULE_single_value = 24
    RULE_booleanOperator = 25
    RULE_numericOperator = 26
    RULE_valueOperator = 27
    RULE_regexOperator = 28
    RULE_booleanExpression = 29
    RULE_valueExpression = 30
    RULE_regexExpression = 31
    RULE_functionExpression = 32
    RULE_primaryExpression = 33

    ruleNames =  [ "stylesheet", "entry", "rule_", "selector", "simple_selector_operator", 
                   "link_selector", "layer_id_selector", "simple_selector", 
                   "zoom_selector", "quoted", "cssident", "osmtag", "attribute_selector", 
                   "predicate", "predicate_simple", "class_selector", "pseudo_class_selector", 
                   "type_selector", "declaration_block", "declarations", 
                   "declaration", "declaration_property", "declaration_value", 
                   "int_", "single_value", "booleanOperator", "numericOperator", 
                   "valueOperator", "regexOperator", "booleanExpression", 
                   "valueExpression", "regexExpression", "functionExpression", 
                   "primaryExpression" ]

    EOF = Token.EOF
    COMMA=1
    QUESTION_MARK=2
    OP_INCLUDED_IN=3
    OP_INTERSECTS=4
    OP_SUBSET=5
    OP_SUPERSET=6
    OP_NOSUBSET=7
    OP_NOSUPERSET=8
    PAR_OPEN=9
    PAR_CLOSE=10
    DOT=11
    OP_EQ=12
    OP_NEQ=13
    OP_LE=14
    OP_GE=15
    OP_LT=16
    OP_GT=17
    OP_MATCH=18
    OP_NOT_MATCH=19
    OP_STARTS_WITH=20
    OP_ENDS_WITH=21
    OP_SUBSTRING=22
    OP_CONTAINS=23
    OP_OR=24
    OP_AND=25
    OP_MUL=26
    OP_DIV=27
    OP_MOD=28
    OP_PLUS=29
    OP_MINUS=30
    OP_NOT=31
    SET=32
    IMPORT=33
    NCOMPONENT=34
    LBRACKET=35
    RBRACKET=36
    LBRACE=37
    RBRACE=38
    COLON=39
    SEMICOLON=40
    DQUOTED_STRING=41
    SQUOTED_STRING=42
    POSITIVE_INT=43
    NEGATIVE_INT=44
    POSITIVE_FLOAT=45
    NEGATIVE_FLOAT=46
    RANGE=47
    REGEXP=48
    WS=49
    SL_COMMENT=50
    ML_COMMENT=51
    STYLESHEET=52
    RULE=53
    SIMPLE_SELECTOR=54
    DESCENDANT_COMBINATOR=55
    CHILD_COMBINATOR=56
    PARENT_COMBINATOR=57
    TYPE_SELECTOR=58
    ZOOM_SELECTOR=59
    ATTRIBUTE_SELECTOR=60
    CLASS_SELECTOR=61
    PSEUDO_CLASS_SELECTOR=62
    LAYER_ID_SELECTOR=63
    DECLARATION_BLOCK=64
    DECLARATION=65
    VALUE_RGB=66
    VALUE_RGBA=67
    VALUE_URL=68
    VALUE_KEYWORD=69
    VALUE_QUOTED=70
    VALUE_FLOAT=71
    VALUE_INT=72
    VALUE_PERCENTAGE=73
    VALUE_POINTS=74
    VALUE_PIXELS=75
    VALUE_LIST=76
    VALUE_REGEXP=77
    VALUE_INCREMENT=78
    FUNCTION_CALL=79
    PREDICATE=80
    TR_CALL=81
    EVAL_CALL=82

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StylesheetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MapCSSParser.EOF, 0)

        def entry(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MapCSSParser.EntryContext)
            else:
                return self.getTypedRuleContext(MapCSSParser.EntryContext,i)


        def getRuleIndex(self):
            return MapCSSParser.RULE_stylesheet

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStylesheet" ):
                listener.enterStylesheet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStylesheet" ):
                listener.exitStylesheet(self)




    def stylesheet(self):

        localctx = MapCSSParser.StylesheetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_stylesheet)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MapCSSParser.OP_MUL) | (1 << MapCSSParser.OP_MINUS) | (1 << MapCSSParser.NCOMPONENT))) != 0):
                self.state = 68
                self.entry()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 74
            self.match(MapCSSParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rule_(self):
            return self.getTypedRuleContext(MapCSSParser.Rule_Context,0)


        def getRuleIndex(self):
            return MapCSSParser.RULE_entry

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntry" ):
                listener.enterEntry(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntry" ):
                listener.exitEntry(self)




    def entry(self):

        localctx = MapCSSParser.EntryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_entry)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.rule_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rule_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selector(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MapCSSParser.SelectorContext)
            else:
                return self.getTypedRuleContext(MapCSSParser.SelectorContext,i)


        def declaration_block(self):
            return self.getTypedRuleContext(MapCSSParser.Declaration_blockContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MapCSSParser.COMMA)
            else:
                return self.getToken(MapCSSParser.COMMA, i)

        def getRuleIndex(self):
            return MapCSSParser.RULE_rule_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRule_" ):
                listener.enterRule_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRule_" ):
                listener.exitRule_(self)




    def rule_(self):

        localctx = MapCSSParser.Rule_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_rule_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.selector()
            self.state = 83
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 79
                    self.match(MapCSSParser.COMMA)
                    self.state = 80
                    self.selector() 
                self.state = 85
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MapCSSParser.COMMA:
                self.state = 86
                self.match(MapCSSParser.COMMA)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.declaration_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_selector(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MapCSSParser.Simple_selectorContext)
            else:
                return self.getTypedRuleContext(MapCSSParser.Simple_selectorContext,i)


        def OP_GT(self):
            return self.getToken(MapCSSParser.OP_GT, 0)

        def link_selector(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MapCSSParser.Link_selectorContext)
            else:
                return self.getTypedRuleContext(MapCSSParser.Link_selectorContext,i)


        def pseudo_class_selector(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MapCSSParser.Pseudo_class_selectorContext)
            else:
                return self.getTypedRuleContext(MapCSSParser.Pseudo_class_selectorContext,i)


        def simple_selector_operator(self):
            return self.getTypedRuleContext(MapCSSParser.Simple_selector_operatorContext,0)


        def getRuleIndex(self):
            return MapCSSParser.RULE_selector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelector" ):
                listener.enterSelector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelector" ):
                listener.exitSelector(self)




    def selector(self):

        localctx = MapCSSParser.SelectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_selector)
        self._la = 0 # Token type
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.simple_selector()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.simple_selector()
                self.state = 96
                self.simple_selector()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 98
                self.simple_selector()
                self.state = 99
                self.match(MapCSSParser.OP_GT)
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MapCSSParser.OP_NOT) | (1 << MapCSSParser.LBRACKET) | (1 << MapCSSParser.COLON))) != 0):
                    self.state = 102
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [MapCSSParser.LBRACKET]:
                        self.state = 100
                        self.link_selector()
                        pass
                    elif token in [MapCSSParser.OP_NOT, MapCSSParser.COLON]:
                        self.state = 101
                        self.pseudo_class_selector()
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 106
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 107
                self.simple_selector()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 109
                self.simple_selector()
                self.state = 110
                self.simple_selector_operator()
                self.state = 111
                self.simple_selector()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_selector_operatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OP_LT(self):
            return self.getToken(MapCSSParser.OP_LT, 0)

        def OP_INCLUDED_IN(self):
            return self.getToken(MapCSSParser.OP_INCLUDED_IN, 0)

        def OP_INTERSECTS(self):
            return self.getToken(MapCSSParser.OP_INTERSECTS, 0)

        def OP_SUBSET(self):
            return self.getToken(MapCSSParser.OP_SUBSET, 0)

        def OP_SUPERSET(self):
            return self.getToken(MapCSSParser.OP_SUPERSET, 0)

        def OP_NOSUBSET(self):
            return self.getToken(MapCSSParser.OP_NOSUBSET, 0)

        def OP_NOSUPERSET(self):
            return self.getToken(MapCSSParser.OP_NOSUPERSET, 0)

        def getRuleIndex(self):
            return MapCSSParser.RULE_simple_selector_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_selector_operator" ):
                listener.enterSimple_selector_operator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_selector_operator" ):
                listener.exitSimple_selector_operator(self)




    def simple_selector_operator(self):

        localctx = MapCSSParser.Simple_selector_operatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_simple_selector_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MapCSSParser.OP_INCLUDED_IN) | (1 << MapCSSParser.OP_INTERSECTS) | (1 << MapCSSParser.OP_SUBSET) | (1 << MapCSSParser.OP_SUPERSET) | (1 << MapCSSParser.OP_NOSUBSET) | (1 << MapCSSParser.OP_NOSUPERSET) | (1 << MapCSSParser.OP_LT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Link_selectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.v = None # Int_Context

        def LBRACKET(self):
            return self.getToken(MapCSSParser.LBRACKET, 0)

        def cssident(self):
            return self.getTypedRuleContext(MapCSSParser.CssidentContext,0)


        def valueOperator(self):
            return self.getTypedRuleContext(MapCSSParser.ValueOperatorContext,0)


        def valueExpression(self):
            return self.getTypedRuleContext(MapCSSParser.ValueExpressionContext,0)


        def RBRACKET(self):
            return self.getToken(MapCSSParser.RBRACKET, 0)

        def numericOperator(self):
            return self.getTypedRuleContext(MapCSSParser.NumericOperatorContext,0)


        def int_(self):
            return self.getTypedRuleContext(MapCSSParser.Int_Context,0)


        def getRuleIndex(self):
            return MapCSSParser.RULE_link_selector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLink_selector" ):
                listener.enterLink_selector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLink_selector" ):
                listener.exitLink_selector(self)




    def link_selector(self):

        localctx = MapCSSParser.Link_selectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_link_selector)
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.match(MapCSSParser.LBRACKET)
                self.state = 118
                self.cssident()
                self.state = 119
                self.valueOperator()
                self.state = 120
                self.valueExpression(0)
                self.state = 121
                self.match(MapCSSParser.RBRACKET)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.match(MapCSSParser.LBRACKET)
                self.state = 124
                self.cssident()
                self.state = 125
                self.numericOperator()
                self.state = 126
                localctx.v = self.int_()
                self.state = 127
                self.match(MapCSSParser.RBRACKET)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Layer_id_selectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.k = None # CssidentContext

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(MapCSSParser.COLON)
            else:
                return self.getToken(MapCSSParser.COLON, i)

        def cssident(self):
            return self.getTypedRuleContext(MapCSSParser.CssidentContext,0)


        def getRuleIndex(self):
            return MapCSSParser.RULE_layer_id_selector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLayer_id_selector" ):
                listener.enterLayer_id_selector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLayer_id_selector" ):
                listener.exitLayer_id_selector(self)




    def layer_id_selector(self):

        localctx = MapCSSParser.Layer_id_selectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_layer_id_selector)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(MapCSSParser.COLON)
            self.state = 132
            self.match(MapCSSParser.COLON)
            self.state = 133
            localctx.k = self.cssident()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_selectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_selector(self):
            return self.getTypedRuleContext(MapCSSParser.Type_selectorContext,0)


        def zoom_selector(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MapCSSParser.Zoom_selectorContext)
            else:
                return self.getTypedRuleContext(MapCSSParser.Zoom_selectorContext,i)


        def class_selector(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MapCSSParser.Class_selectorContext)
            else:
                return self.getTypedRuleContext(MapCSSParser.Class_selectorContext,i)


        def attribute_selector(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MapCSSParser.Attribute_selectorContext)
            else:
                return self.getTypedRuleContext(MapCSSParser.Attribute_selectorContext,i)


        def pseudo_class_selector(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MapCSSParser.Pseudo_class_selectorContext)
            else:
                return self.getTypedRuleContext(MapCSSParser.Pseudo_class_selectorContext,i)


        def layer_id_selector(self):
            return self.getTypedRuleContext(MapCSSParser.Layer_id_selectorContext,0)


        def getRuleIndex(self):
            return MapCSSParser.RULE_simple_selector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_selector" ):
                listener.enterSimple_selector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_selector" ):
                listener.exitSimple_selector(self)




    def simple_selector(self):
